# system-keyboard-qt

./: .gitignore  CMakeLists.txt  build.sh  filterablecombobox.cpp  filterablecombobox.h  keyboardlayouts.cpp  keyboardlayouts.h  main.cpp  mx-system-keyboard.pro  posixconfigparser.cpp  release.sh  selectlayoutdialog.cpp  selectlayoutdialog.h  system-keyboard-qt.pro  translation.h  window.cpp  window.h  window.ui
debian/: changelog  control  install
policy/: org.mxlinux.pkexec.system-keyboard-qt.policy
translations/: system-keyboard-qt_am.ts  system-keyboard-qt_ar.ts  system-keyboard-qt_bg.ts  system-keyboard-qt_bn.ts  system-keyboard-qt_ca.ts  system-keyboard-qt_cs.ts  system-keyboard-qt_da.ts  system-keyboard-qt_de.ts  system-keyboard-qt_el.ts  system-keyboard-qt_es.ts  system-keyboard-qt_et.ts  system-keyboard-qt_eu.ts  system-keyboard-qt_fa.ts  system-keyboard-qt_fi.ts  system-keyboard-qt_fil_PH.ts  system-keyboard-qt_fr.ts  system-keyboard-qt_he_IL.ts  system-keyboard-qt_hi.ts  system-keyboard-qt_hr.ts  system-keyboard-qt_hu.ts  system-keyboard-qt_id.ts  system-keyboard-qt_is.ts  system-keyboard-qt_it.ts  system-keyboard-qt_ja.ts  system-keyboard-qt_kk.ts  system-keyboard-qt_ko.ts  system-keyboard-qt_lt.ts  system-keyboard-qt_mk.ts  system-keyboard-qt_mr.ts  system-keyboard-qt_nb.ts  system-keyboard-qt_nl.ts  system-keyboard-qt_nl_BE.ts  system-keyboard-qt_pl.ts  system-keyboard-qt_pt.ts  system-keyboard-qt_pt_BR.ts  system-keyboard-qt_ro.ts  system-keyboard-qt_ru.ts  system-keyboard-qt_sk.ts  system-keyboard-qt_sl.ts  system-keyboard-qt_sq.ts  (+7 more)
translations-desktop-file/.tx/: config_20230408125835.bak
(+15 files in other folders)
